complete all user/post/profile/tag problems

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,3 +8,9 @@ sessionproviderconfig = "./tmp"
 sessioncookielifetime = 3600 * 24
 
 private_key = "dawndevil"
+rebuilddatabase = false
+
+dtype="mysql"
+duser="root"
+dpassword="1997"
+database="dawnblog"
